--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
   "name": "lettrcd",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "A javascript library that randomises a word or phrase until every letter match",
+  "main": "dist/lettrcd.min.js",
   "scripts": {
-    "start": "babel --presets es2015 src/script.js -w --out-file lib/script.js"
+    "start": "webpack -wp",
+    "build": "webpack -p"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-preset-es2015": "^6.9.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bnto/lettrcd.git"
   },
+  "homepage": "https;//github.com/bnto/lettrcd",
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      [
+        "transform-es2015-classes",
+        {
+          "loose": true
+        }
+      ]
+    ]
+  },
+  "author": "Christophe Bento <be@nto.lu>",
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^1.13.3"
   }
 }
